--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.33.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.8.1",
+    "three": "^0.175.0",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
